syntax = "proto3";
package mygrpcproto;

//Service definition.
service MyGrpcSrv {
	rpc addInt (AddIntRequest) returns (addIntReply){}
}

//The request message
message AddIntRequest {
	int32 num1 = 1;
	int32 num2 = 2;
}

//The response message
message addIntReply{
	int32 result = 1;
	string comment = 2;
}

